Changed the LOGO

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Movie Hut</title>
+	<title>Movie H U T</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="Images/Favicon.ico">
+
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="76x76" href="Images/Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="Images/Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="Images/Favicon/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="stylesheet" type="text/css" href="Style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +30,7 @@
 			</div>
 		</li>
 		<li class="navbar"><a class="navbar" href="#contact">Contact Us</a></li>
-		<li class="navbar_logo"><img src="Images/MovieHut Logo White.png" class="logo" width="10%" height="10%"></li>
+		<li class="navbar_logo"><img src="Images/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
 		<li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
 		<li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
