--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="76x76" href="Images/Favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="Images/Favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="Images/Favicon/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="apple-touch-icon" sizes="76x76" href="Images/Logo/Favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="Images/Logo/Favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="Images/Logo/Favicon/favicon-16x16.png">
+	<link rel="manifest" href="Images/Logo/Favicon/site.webmanifest">
+	<link rel="mask-icon" href="Images/Logo/Favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 
@@ -30,7 +30,7 @@
 			</div>
 		</li>
 		<li class="navbar"><a class="navbar" href="#contact">Contact Us</a></li>
-		<li class="navbar_logo"><img src="Images/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
+		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
 		<li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
 		<li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
