--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<a href="#">Image Gallery</a>
 			</div>
 		</li>
-		<li class="navbar"><a class="navbar" href="#contact">Contact Us</a></li>
+		<li class="navbar"><a class="navbar" href="About.html">Contact Us</a></li>
 		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
 		<li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
 		<li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
