--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <div class="w3-center">
       <div class="w3-center">
-        <img src="unnamed.jpg" class="w3-center" alt="unnamed" style="width:30%">
+        <img src="Images/Logo/MovieHut Logo.png" class="w3-center" alt="unnamed" style="width:30%">
       </div>
     </div>
   
