--- a/about.html
+++ b/about.html
@@ -13,6 +13,22 @@
   </style>
 
 <body>
+  <ul class="navbar">
+    <li class="navbar"><a class="navbar active" href="#home"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+    <li class="navbar dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Movies</a>
+      <div class="dropdown-content">
+        <a href="#">Reserve Now</a>
+        <a href="#">Upcomings</a>
+        <a href="#">Image Gallery</a>
+      </div>
+    </li>
+    <li class="navbar"><a class="navbar" href="About.html">Contact Us</a></li>
+    <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
+    <li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
+    <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
+    <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
+  </ul>
 
   <!-- Page content -->
   <div class="w3-content" style="max-width:2000px;margin-top:46px">
