--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <title>About</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="Style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,6 +30,7 @@
     <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
     <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
   </ul>
+
 
   <!-- Page content -->
   <div class="w3-content" style="max-width:2000px;margin-top:46px">
