--- a/Signup.html
+++ b/Signup.html
@@ -15,7 +15,7 @@
 
     	<div class="Content1">
 
-             <h2 align="center" class="image"><img src="hut1.jpg" width="100px" height="100px"></h2>
+             <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo.png" width="100px" height="100px"></h2>
               <hr style="border-top: dotted 1px;" />
     		<h2>Sign Up to Reserve,Purchase,Rent out DVD's from your Seat</h2>
 
@@ -29,7 +29,7 @@
 
           
              <div class="Content">
-             	  <h2 align="center" class="image1"><img src="hut1.jpg" width="100px" height="100px"></h2>
+             	  <h2 align="center" class="image1"><img src="Images/Logo/MovieHut Logo.png" width="100px" height="100px"></h2>
 
              	  <h3 align="center">Sign Up</h3>
              	  
