--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
 
 <body>
   <ul class="navbar">
-    <li class="navbar"><a class="navbar active" href="#home"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+    <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
     <li class="navbar dropdown">
       <a href="javascript:void(0)" class="dropbtn">Movies</a>
       <div class="dropdown-content">
