--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<ul class="navbar">
-		<li class="navbar"><a class="navbar active" href="#home"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+		<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
 		<li class="navbar dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Movies</a>
 			<div class="dropdown-content">
