ADDEd A abckground Image

--- a/SignUp.html
+++ b/SignUp.html
@@ -6,7 +6,7 @@
 	            <link rel="stylesheet" type="text/css" href="Signupstyle.css">
     </head>
     
-    <body>
+    <body background="Images/Background/Deadpool.jpg">
     	<div class="Header">
 
 
