--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+	<!-- Navigation Bar -->
 	<ul class="navbar">
 		<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
 		<li class="navbar dropdown">
@@ -35,6 +37,7 @@
 		<li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
 	</ul>
+	
 	<h1 align="center">Welcome</h1>
 
 </body>
