--- a/SignUp.html
+++ b/SignUp.html
@@ -4,9 +4,30 @@
     <head>
 	            <title>Sign Up</title>
 	            <link rel="stylesheet" type="text/css" href="Signupstyle.css">
+              <link rel="stylesheet" type="text/css" href="Style.css">
+              <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     
     <body>
+
+      <!-- Navigation Bar -->
+        <ul class="navbar">
+          <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+          <li class="navbar dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Movies</a>
+            <div class="dropdown-content">
+              <a href="#">Reserve Now</a>
+              <a href="#">Upcomings</a>
+              <a href="#">Image Gallery</a>
+            </div>
+          </li>
+          <li class="navbar"><a class="navbar" href="About.html">Contact Us</a></li>
+          <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
+          <li class="navbar_right"><a class="navbar" href="SignUp.html">Register</a></li>
+          <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
+          <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
+        </ul>
     	<div class="Header">
 
 
