--- a/SignUp.html
+++ b/SignUp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+ <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
 	            <title>Sign Up</title>
