ADDed a CLASS NAME SEARCH IN EVERY HTML PAGE FOR THE SEARCH BAR

--- a/SignUp.html
+++ b/SignUp.html
@@ -29,7 +29,7 @@
           <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
           <li class="navbar_right"><a class="navbar" href="SignUp.html">Register</a></li>
           <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
-          <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
+          <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
         </ul>
                       <!-- ENd of Navigation Bar -->
 
