--- a/About.html
+++ b/About.html
@@ -28,7 +28,7 @@
     <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
     <li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
     <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
-    <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search"></li>
+    <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
   </ul>
 
 
