--- a/Contact Us.html
+++ b/Contact Us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>About</title>
+<title>Contact H U T</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="Style.css">
