--- a/Register.html
+++ b/Register.html
@@ -3,7 +3,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-	            <title>Sign Up</title>
+	            <title>Register H U T</title>
 	            
               <link rel="stylesheet" type="text/css" href="Style.css">
               <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
