--- a/Contact Us.html
+++ b/Contact Us.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html>
-<title>Contact H U T</title>
+<head>
+  <title>Contact H U T</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="76x76" href="Images/Logo/Favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo/Favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Images/Logo/Favicon/favicon-16x16.png">
+  <link rel="manifest" href="Images/Logo/Favicon/site.webmanifest">
+  <link rel="mask-icon" href="Images/Logo/Favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" type="text/css" href="Style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <style>
-  body {font-family: "Lato", sans-serif}
-  .mySlides {display: none}
+
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .mySlides {
+    display: none
+  }
+  
   </style>
 
+</head>
 <body>
+
+  <!-- Navigation Bar -->
   <ul class="navbar">
     <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
     <li class="navbar dropdown">
@@ -24,9 +45,9 @@
         <a href="#">Image Gallery</a>
       </div>
     </li>
-    <li class="navbar"><a class="navbar" href="About.html">Contact Us</a></li>
+    <li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
     <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
-    <li class="navbar_right"><a class="navbar" href="#Register">Register</a></li>
+    <li class="navbar_right"><a class="navbar" href="Register.html">Register</a></li>
     <li class="navbar_right"><a class="navbar" href="#Login">Login</a></li>
     <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
   </ul>
