--- a/Register.html
+++ b/Register.html
@@ -19,8 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-    
-<body class="BODY" background="Images/Background/Deadpool.jpg">\
+<body background="Images/Background/Deadpool.jpg">
 
   <!-- Navigation Bar -->
   <ul class="navbar">
@@ -42,7 +41,6 @@
   <!-- End of Navigation Bar -->
 
   <div class="Content1">
-
     <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo.png" width="30%" height="40%"></h2>
     <hr style="border-top: dotted 1px;" />
     <h2>Sign Up to Reserve,Purchase,Rent out DVD's from your Seat</h2>
