--- a/Register.html
+++ b/Register.html
@@ -41,7 +41,7 @@
   <!-- End of Navigation Bar -->
 
   <div class="Content1">
-    <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo.png" width="30%" height="40%"></h2>
+    <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo White.png" width="30%" height="40%"></h2>
     <hr style="border-top: dotted 1px;" />
     <h2>Sign Up to Reserve,Purchase,Rent out DVD's from your Seat</h2>
 
