Minor Bug FIxes

--- a/Register.html
+++ b/Register.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body background="Images/Background/Deadpool.jpg">
+<body>
 
   <!-- Navigation Bar -->
   <ul class="navbar">
@@ -40,10 +40,11 @@
   </ul>
   <!-- End of Navigation Bar -->
 
+<div class="background">
   <div class="Content1">
-    <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo White.png" width="30%" height="40%"></h2>
+    <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo White.png" width="30%" height="30%"></h2>
     <hr style="border-top: dotted 1px;" />
-    <h2>Sign Up to Reserve,Purchase,Rent out DVD's from your Seat</h2>
+    <h2>Register to reserve, purchase or rent out DVD's from your seat</h2>
 
   </div>
 
@@ -139,6 +140,7 @@
   </form>
   
   </div>
+</div>
 
 </body>
 </html>
