--- a/Register.html
+++ b/Register.html
@@ -40,19 +40,21 @@
   </ul>
   <!-- End of Navigation Bar -->
 
-<div class="background">
+<div class="background"> </div>
   <div class="Content1">
-    <h2 align="center" class="image"><img src="Images/Logo/MovieHut Logo White.png" width="30%" height="30%"></h2>
-    <hr style="border-top: dotted 1px;" />
+    <p align="center"><img src="Images/Logo/Templates/H U T.png" width="30%" height="30%"></p>
+    <hr>
     <h2>Register to reserve, purchase or rent out DVD's from your seat</h2>
+    <p align="center">Already Have an Account</p>
+    <input type="Submit" value="Sign In" name="cmdlogin" class="btnlogin">
 
   </div>
 
   <!-- Division for the Registration Form-->      
   <div class="Content">
   
-  <h2 align="center" class="image1"><img src="Images/Logo/MovieHut Logo.png" width="30%" height="40%"></h2>
-  <h3 align="center">Sign Up</h3>
+  <p align="center">Sign Up</p>
+  <hr>
   <form>
     <table border="0">
       <!-- Name and Name Text Box-->
@@ -132,15 +134,9 @@
       	<td> <input type="Submit" name="cmdsignup" class="btnsignup"  value="SignUp"></td>
       </tr>   
     </table>
-
-    <hr style="border-top: dotted 1px;" />
-
-    <p align="center">Already Have an Account</p>
-    <input type="Submit" value="Sign In" name="cmdlogin" class="btnlogin">
   </form>
   
   </div>
-</div>
 
 </body>
 </html>
