--- a/Register.html
+++ b/Register.html
@@ -44,7 +44,7 @@
   <div class="Content1">
     <p align="center"><img src="Images/Logo/Templates/H U T.png" width="30%" height="30%"></p>
     <hr>
-    <h2>Register to reserve, purchase or rent out DVD's from your seat</h2>
+    <h2 align="center">Register to H U T</h2>
     <p align="center">Already Have an Account</p>
     <input type="Submit" value="Sign In" name="cmdlogin" class="btnlogin">
 
