--- a/Signin.html
+++ b/Signin.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<title img src="MovieHut Logo White.jpg"> Sign In </title>
-		<link rel="stylesheet" href="Signin.css" type="text/css">
+		<link rel="stylesheet" href="Style.css" type="text/css">
 </head>
-<body>
+<body id="bodysignin">
 			<div>
 				<div class="table1">
 					<h1 align="center" class="head1"> <img src="Images/Logo/MovieHut Logo White.png" alt="Trulli" width="80%" height="20%"> </h1>
