--- a/Contact Us.html
+++ b/Contact Us.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
-  
+
   .mySlides {
     display: none
   }
@@ -42,7 +42,7 @@
       </div>
     </li>
     <li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
-    <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"><</li>
+    <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
     <li class="navbar_right"><a class="navbar" href="Register.html">Register</a></li>
     <li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
     <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
