--- a/Register.html
+++ b/Register.html
@@ -33,7 +33,7 @@
       </div>
     </li>
     <li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
-    <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"><</li>
+    <li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
     <li class="navbar_right"><a class="navbar" href="Register.html">Register</a></li>
     <li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
     <li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
