--- a/Signin.html
+++ b/Signin.html
@@ -12,9 +12,9 @@
 				<div class="table1">
 					<h1 align="center" class="head1"> <img src="Images/Logo/MovieHut Logo White.png" alt="Trulli" width="80%" height="20%"> </h1>
 						<form method="post">
-						<input class ="text1" type="email" placeholder="Enter E-Mail" name="E-mail">
+						<input class ="text1" type="email" placeholder="Enter E-Mail" name="E-mail" value="Enter Email">
 						<br></br>
-						<input class ="text1" type="password" placeholder="Enter Password" name="psw">
+						<input class ="text1" type="password" placeholder="Enter Password" name="psw" value="Enter Password">
 						<br></br>
 						<button class="Sign1" type ="submit"> Sign In </button>
 						<button class="Sign2" type ="submit"> Sign Up </button>
