--- a/Register.html
+++ b/Register.html
@@ -53,7 +53,8 @@
   <!-- Division for the Registration Form-->      
   <div class="Content">
   
-  <p align="center">Sign Up</p>
+
+  <font size="4"><p align="center"><b>Sign Up</b></p></font>
   <hr>
   <form>
     <table border="0">
