--- a/Login.html
+++ b/Login.html
@@ -41,7 +41,7 @@
 
 			<div>
 				<div class="table1">
-					<h1 align="center" class="head1"> <img src="Images/Logo/MovieHut Logo White.png" alt="Trulli" width="80%" height="20%"> </h1>
+					<h1 align="center" class="head1"> Log In </h1>
 						<form method="post">
 						<input class ="text1" type="email" placeholder="Enter E-Mail" name="E-mail">
 						<br></br>
