--- a/Index.html
+++ b/Index.html
@@ -47,12 +47,12 @@
 		  <!-- Full-width images with number text -->
 		  <div class="mySlides">
 		    <div class="numbertext">1 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
+		      <img src="Images/Background/MI6.jpg" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 		    <div class="numbertext">2 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
+		      <img src="Images/Background/Captain America.jpg" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
@@ -87,10 +87,10 @@
 		  <!-- Thumbnail images -->
 		  <div class="row">
 		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+		      <img class="demo cursor" src="Images/Background/MI6.jpg" style="width:100%" onclick="currentSlide(1)" alt="Mission Impossible 6: Fallout">
 		    </div>
 		    <div class="column"> 
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+		      <img class="demo cursor" src="Images/Background/Captain America.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
 		    </div>
 		    <div class="column">
 		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
