--- a/Index.html
+++ b/Index.html
@@ -37,80 +37,78 @@
 		<li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
-	
-	<div class="main">
 
-		<!-- Slideshow Gallery -->
-		<!-- Container for the image gallery -->
-		<div class="slideshow">
+	<!-- Slideshow Gallery -->
+	<!-- Container for the image gallery -->
+	<div class="slideshow">
 
-		  <!-- Full-width images with number text -->
-		  <div class="mySlides">
-		    <div class="numbertext">1 / 6</div>
-		      <img src="Images/Background/MI6.jpg" style="width:100%">
-		  </div>
+	  <!-- Full-width images with number text -->
+	  <div class="mySlides">
+	    <div class="numbertext">1 of 6</div>
+	      <img src="Images/Background/Martian.jpg" style="width:100%">
+	  </div>
 
-		  <div class="mySlides">
-		    <div class="numbertext">2 / 6</div>
-		      <img src="Images/Background/Captain America.jpg" style="width:100%">
-		  </div>
+	  <div class="mySlides">
+	    <div class="numbertext">2 of 6</div>
+	      <img src="Images/Background/Alien.jpg" style="width:100%">
+	  </div>
 
-		  <div class="mySlides">
-		    <div class="numbertext">3 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
-		  </div>
+	  <div class="mySlides">
+	    <div class="numbertext">3 of 6</div>
+	      <img src="Images/Background/Venom.jpg" style="width:100%">
+	  </div>
 
-		  <div class="mySlides">
-		    <div class="numbertext">4 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
-		  </div>
+	  <div class="mySlides">
+	    <div class="numbertext">4 of 6</div>
+	      <img src="Images/Background/Tomb Raider.jpg" style="width:100%">
+	  </div>
 
-		  <div class="mySlides">
-		    <div class="numbertext">5 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
-		  </div>
+	  <div class="mySlides">
+	    <div class="numbertext">5 of 6</div>
+	      <img src="Images/Background/Dracula.jpg" style="width:100%">
+	  </div>
 
-		  <div class="mySlides">
-		    <div class="numbertext">6 / 6</div>
-		      <img src="Images/Background/Deadpool.jpg" style="width:100%">
-		  </div>
+	  <div class="mySlides">
+	    <div class="numbertext">6 of 6</div>
+	      <img src="Images/Background/MI6.jpg" style="width:100%">
+	  </div>
 
-		  <!-- Next and previous buttons -->
-		  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+	  <!-- Next and previous buttons -->
+	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-		  <!-- Image text -->
-		  <div class="caption-container">
-		    <p id="caption"></p>
-		  </div>
+	  <!-- Image text -->
+	  <div class="caption-container">
+	    <p id="caption"></p>
+	  </div>
 
-		  <!-- Thumbnail images -->
-		  <div class="row">
-		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/MI6.jpg" style="width:100%" onclick="currentSlide(1)" alt="Mission Impossible 6: Fallout">
-		    </div>
-		    <div class="column"> 
-		      <img class="demo cursor" src="Images/Background/Captain America.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-		    </div>
-		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-		    </div>
-		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-		    </div>
-		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-		    </div> 
-		    <div class="column">
-		      <img class="demo cursor" src="Images/Background/Deadpool.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-		    </div>
-		  </div>
-		</div>
-
-		<!-- Javascript link to Slideshow Gallery -->
-		<script src="Slideshow.js" type="text/javascript"></script>
-
+	  <!-- Thumbnail images -->
+	  <div class="row">
+	    <div class="column">
+	      <img class="demo cursor" src="Images/Background/Martian.jpg" style="width:100%" onclick="currentSlide(1)" alt="T H E &nbsp M A R T I A N">
+	    </div>
+	    <div class="column"> 
+	      <img class="demo cursor" src="Images/Background/Alien.jpg" style="width:100%" onclick="currentSlide(2)" alt="A L I E N">
+	    </div>
+	    <div class="column">
+	      <img class="demo cursor" src="Images/Background/Venom.jpg" style="width:100%" onclick="currentSlide(3)" alt="V E N O M">
+	    </div>
+	    <div class="column">
+	      <img class="demo cursor" src="Images/Background/Tomb Raider.jpg" style="width:100%" onclick="currentSlide(4)" alt="T O M B &nbsp R A I D E R">
+	    </div>
+	    <div class="column">
+	      <img class="demo cursor" src="Images/Background/Dracula.jpg" style="width:100%" onclick="currentSlide(5)" alt="D R A C U L A &nbsp : &nbsp T H E &nbsp U N T O L D">
+	    </div> 
+	    <div class="column">
+	      <img class="demo cursor" src="Images/Background/MI6.jpg" style="width:100%" onclick="currentSlide(6)" alt="M I S S I O N &nbsp I M P O S S I B L E &nbsp 6 &nbsp : &nbsp F A L L O U T">
+	    </div>
+	  </div>
 	</div>
+
+	<!-- Javascript link to Slideshow Gallery -->
+	<script src="Slideshow.js" type="text/javascript"></script>
+
+	
 
 </body>
 </html>
