--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 		<li class="navbar dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Movies</a>
 			<div class="dropdown-content">
-				<a href="#">Reserve Now</a>
+				<a href="#Reserve">Reserve Now</a>
 				<a href="#">Upcomings</a>
 				<a href="#">Image Gallery</a>
 			</div>
@@ -44,32 +44,32 @@
 
 	  <!-- Full-width images with number text -->
 	  <div class="mySlides">
-	    <div class="numbertext">1 of 6</div>
+	    <div class="numbertext">Featuring 1 of 6: The Martian</div>
 	      <img src="Images/Background/Martian.jpg" style="width:100%">
 	  </div>
 
 	  <div class="mySlides">
-	    <div class="numbertext">2 of 6</div>
+	    <div class="numbertext">Featuring 2 of 6: Alien</div>
 	      <img src="Images/Background/Alien.jpg" style="width:100%">
 	  </div>
 
 	  <div class="mySlides">
-	    <div class="numbertext">3 of 6</div>
+	    <div class="numbertext">Featuring 3 of 6: Venom</div>
 	      <img src="Images/Background/Venom.jpg" style="width:100%">
 	  </div>
 
 	  <div class="mySlides">
-	    <div class="numbertext">4 of 6</div>
+	    <div class="numbertext">Featuring 4 of 6: Tomb Raider</div>
 	      <img src="Images/Background/Tomb Raider.jpg" style="width:100%">
 	  </div>
 
 	  <div class="mySlides">
-	    <div class="numbertext">5 of 6</div>
+	    <div class="numbertext">Featuring 5 of 6: Dracula</div>
 	      <img src="Images/Background/Dracula.jpg" style="width:100%">
 	  </div>
 
 	  <div class="mySlides">
-	    <div class="numbertext">6 of 6</div>
+	    <div class="numbertext" style="color: black;">Featuring 6 of 6: Mission Impossible Fallout</div>
 	      <img src="Images/Background/MI6.jpg" style="width:100%">
 	  </div>
 
@@ -108,7 +108,9 @@
 	<!-- Javascript link to Slideshow Gallery -->
 	<script src="Slideshow.js" type="text/javascript"></script>
 
-	
+	<div id="Reserve" class="container">
+		<h1>Reserve Now</h1>
+	</div>
 
 </body>
 </html>
