--- a/Index.html
+++ b/Index.html
@@ -109,7 +109,11 @@
 	<script src="Slideshow.js" type="text/javascript"></script>
 
 	<div id="Reserve" class="container">
-		<h1>Reserve Now</h1>
+		<br>
+		<br>
+		<h1>The action of booking something</h1>
+		<p>Last Minute Movie Browsing. No Problem</p>
+		<a href="#">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
 
 </body>
