--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 			<a href="javascript:void(0)" class="dropbtn">Movies</a>
 			<div class="dropdown-content">
 				<a href="#Reserve">Reserve Now</a>
-				<a href="#">Upcomings</a>
+				<a href="#Upcomings">Upcomings</a>
 				<a href="#">Image Gallery</a>
 			</div>
 		</li>
@@ -108,11 +108,19 @@
 	<!-- Javascript link to Slideshow Gallery -->
 	<script src="Slideshow.js" type="text/javascript"></script>
 
-	<div id="Reserve" class="container">
+	<div class="container">
 		<br>
+		<h1 id="Reserve">In the action of booking something ?????</h1>
+		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
+		<a href="#">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+	</div>
+
+	<hr width="75%">
+
+	<div class="container">
 		<br>
-		<h1>The action of booking something</h1>
-		<p>Last Minute Movie Browsing. No Problem</p>
+		<h1 id="Upcomings">About to happen. Forthcoming.</h1>
+		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
 		<a href="#">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
 
