--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 			<div class="dropdown-content">
 				<a href="#Reserve">Reserve Now</a>
 				<a href="#Upcomings">Upcomings</a>
-				<a href="#">Image Gallery</a>
+				<a href="#IMG_Gallery">Image Gallery</a>
 			</div>
 		</li>
 		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
@@ -110,7 +110,7 @@
 
 	<div class="container">
 		<br>
-		<h1 id="Reserve">In the action of booking something ?????</h1>
+		<h1 id="Reserve">In the action of booking something</h1>
 		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
 		<a href="#">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
@@ -119,9 +119,70 @@
 
 	<div class="container">
 		<br>
+		<br>
+		<br>
 		<h1 id="Upcomings">About to happen. Forthcoming.</h1>
-		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
-		<a href="#">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+		<p>Stay tuned with us for the upcoming movies</p>
+		<a href="#">Subscribe <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+	</div>
+
+	<hr width="75%">
+
+	<div id="IMG_Gallery" class="container" style="height: 100%;">
+		<h1 id="Reserve">The Movie Gallery</h1>
+		<p>Browse the Popular Genres <br> <br>
+		Comedy | Sci-Fi | Horror | Romance | Action | Thriller <br>
+		Drama | Mystery | Crime | Animation | Adventure | Fantasy</p>
+
+	<!-- Image Gallery -->
+		<div class="gallery">
+		  <a target="_blank" href="fjords.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Cinque Terre" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="forest.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Forest" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="lights.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Northern Lights" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="mountains.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Mountains" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="mountains.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Mountains" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="mountains.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Mountains" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="mountains.jpg">
+		    <img src="Images/Background/Deadpool.jpg" alt="Mountains" width="300" height="200">
+		  </a>
+		  <div class="desc">Add a description of the image here</div>
+		</div>
 	</div>
 
 </body>
