--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 			<div class="dropdown-content">
 				<a href="#Reserve">Reserve Now</a>
 				<a href="#Upcomings">Upcomings</a>
-				<a href="#IMG_Gallery">Image Gallery</a>
+				<a href="#IMG_Gallery">Motion Gallery</a>
 			</div>
 		</li>
 		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
@@ -130,7 +130,7 @@
 
 	<div id="IMG_Gallery" class="container" style="height: 100%;">
 		<h1 id="Reserve">The Movie Gallery</h1>
-		<p>Browse the Popular Genres <br> <br>
+		<p>Browse the Popular Genres<br> <br>
 		Comedy | Sci-Fi | Horror | Romance | Action | Thriller <br>
 		Drama | Mystery | Crime | Animation | Adventure | Fantasy</p>
 
