--- a/Index.html
+++ b/Index.html
@@ -136,24 +136,24 @@
 
 	<!-- Image Gallery -->
 		<div class="gallery">
-		  <a target="_blank" href="fjords.jpg">
-		    <img src="Images/Background/Deadpool.jpg" alt="Cinque Terre" width="300" height="200">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Pacific Rim.jpg" alt="Pacific Rim" width="300" height="200">
 		  </a>
-		  <div class="desc">Add a description of the image here</div>
+		  <div class="desc"">Pacific Rim Uprising</div>
 		</div>
 
 		<div class="gallery">
-		  <a target="_blank" href="forest.jpg">
-		    <img src="Images/Background/Deadpool.jpg" alt="Forest" width="300" height="200">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Justice League.jpg" alt="Justice League" width="300" height="200">
 		  </a>
-		  <div class="desc">Add a description of the image here</div>
+		  <div class="desc">Justice League</div>
 		</div>
 
 		<div class="gallery">
-		  <a target="_blank" href="lights.jpg">
-		    <img src="Images/Background/Deadpool.jpg" alt="Northern Lights" width="300" height="200">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Warcraft.jpg" alt="Warcraft" width="300" height="200">
 		  </a>
-		  <div class="desc">Add a description of the image here</div>
+		  <div class="desc">Warcraft: The Beginning</div>
 		</div>
 
 		<div class="gallery">
