--- a/Index.html
+++ b/Index.html
@@ -221,6 +221,10 @@
 		<p>Stay tuned with us for the upcoming movies</p>
 		<a href="#">Subscribe <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
+	
+	<div class="footer">
+	  <p><i class="fa fa-html5"></i> by <i class="fa fa-github"></i> Shakya | Rahal | Nafeel | Shohan | Sajidh</p>
+	</div>
 
 </body>
 </html>
