--- a/Index.html
+++ b/Index.html
@@ -224,7 +224,7 @@
 	</div>
 	
 	<div class="footer">
-	  <p><i class="fa fa-html5"></i> by <i class="fa fa-github"></i> Shakya | Rahal | Nafeel | Shohan | Sajidh</p>
+	  <p>Copyright 2018 <i class="fa fa-html5"></i> by <i class="fa fa-github"></i> Shakya | Rahal | Nafeel | Shohan | Sajidh</p>
 	</div>
 
 </body>
