Made Small CHanges

--- a/Register.html
+++ b/Register.html
@@ -42,7 +42,7 @@
 
 <div class="background"> </div>
   <div class="Content1">
-    <p align="center"><img src="Images/Logo/Templates/H U T.png" width="30%" height="30%"></p>
+    <p align="center">Watch Order Purchase Reserve<br> HD Blu Ray Movies With US</p>
     <hr>
     <h2 align="center">Register to H U T</h2>
     <p align="center">Already Have an Account</p>
