Navigation Bar Update

--- a/Contact Us.html
+++ b/Contact Us.html
@@ -40,9 +40,9 @@
     <li class="navbar dropdown">
       <a href="javascript:void(0)" class="dropbtn">Movies</a>
       <div class="dropdown-content">
-        <a href="#">Reserve Now</a>
-        <a href="#">Upcomings</a>
-        <a href="#">Image Gallery</a>
+        <a href="#Reserve">Reserve Now</a>
+        <a href="#IMG_Gallery">Motion Gallery</a>
+        <a href="#Upcomings">Upcomings</a>
       </div>
     </li>
     <li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
