--- a/Login.html
+++ b/Login.html
@@ -21,22 +21,22 @@
 <body id="bodysignin">
 
 	<!-- Navigation Bar -->
-		<ul class="navbar">
-			<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
-			<li class="navbar dropdown">
-				<a href="javascript:void(0)" class="dropbtn">Movies</a>
-				<div class="dropdown-content">
-					<a href="#">Reserve Now</a>
-					<a href="#">Upcomings</a>
-					<a href="#">Image Gallery</a>
-				</div>
-			</li>
-			<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
-			<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
-			<li class="navbar_right"><a class="navbar" href="Register.html">Register</a></li>
-			<li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
-			<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
-		</ul>
+	<ul class="navbar">
+		<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+		<li class="navbar dropdown">
+			<a href="javascript:void(0)" class="dropbtn">Movies</a>
+			<div class="dropdown-content">
+				<a href="#Reserve">Reserve Now</a>
+				<a href="#IMG_Gallery">Motion Gallery</a>
+				<a href="#Upcomings">Upcomings</a>
+			</div>
+		</li>
+		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
+		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
+		<li class="navbar_right"><a class="navbar" href="Register.html">Register</a></li>
+		<li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
+		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
+	</ul>
          
 
 			<div>
