Added footer for others

--- a/Login.html
+++ b/Login.html
@@ -54,5 +54,9 @@
 				
 				</div>
 			</div>
+
+	<div class="footer" style="position: fixed; bottom: 0;">
+	  <p>Copyright 2018 <i class="fa fa-html5"></i> by <i class="fa fa-github"></i> Shakya | Rahal | Nafeel | Shohan | Sajidh</p>
+	</div>
 			
 </body>
