--- a/Contact Us.html
+++ b/Contact Us.html
@@ -36,7 +36,7 @@
 
   <!-- Navigation Bar -->
   <ul class="navbar">
-    <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-home" style="font-size:16px"></i></a></li>
+    <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
     <li class="navbar dropdown">
       <a href="javascript:void(0)" class="dropbtn">Movies</a>
       <div class="dropdown-content">
