--- a/Index.html
+++ b/Index.html
@@ -120,7 +120,7 @@
 	<div id="IMG_Gallery" class="container" style="height: 100%;">
 		<br>
 		<br>
-		<h1 id="Reserve">The Movie Gallery</h1>
+		<h1 id="Reserve">The Motion Gallery</h1>
 		<p>Browse the Popular Genres<br> <br>
 		Comedy | Sci-Fi | Horror | Romance | Action | Thriller <br>
 		Drama | Mystery | Crime | Animation | Adventure | Fantasy</p>
