changed the name

--- a/Register.html
+++ b/Register.html
@@ -65,7 +65,7 @@
       </tr>
 
       <tr>
-        <td><input class="textbox" type="text" name="txtname"></td>
+        <td><input class="textbox" type="text" id="txtname"></td>
       </tr>
                         
       <!-- Radio Button for gender-->
