--- a/Register.html
+++ b/Register.html
@@ -46,7 +46,7 @@
     <hr>
     <h2 align="center">Register to H U T</h2>
     <p align="center">Already Have an Account</p>
-    <input type="Submit" value="Sign In" name="cmdlogin" class="btnlogin">
+    <input type="Submit" value="Sign In" id="cmdlogin" class="btnlogin">
 
   </div>
 
