addded a onclicck function

--- a/Register.html
+++ b/Register.html
@@ -21,6 +21,8 @@
 </head>
 <body>
 
+
+
   <!-- Navigation Bar -->
   <ul class="navbar">
     <li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
@@ -46,7 +48,7 @@
     <hr>
     <h2 align="center">Register to H U T</h2>
     <p align="center">Already Have an Account</p>
-    <input type="Submit" value="Sign In" id="cmdlogin" class="btnlogin">
+    <input type="Submit" value="Sign In" id="cmdlogin" class="btnlogin" onclick="window.location.href='Login.html'">
 
   </div>
 
