--- a/Register.html
+++ b/Register.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-
+    <script type="text/javascript" src="Slideshow.js"> </script>
 
   <!-- Navigation Bar -->
   <ul class="navbar">
@@ -134,7 +134,7 @@
 
       <!-- BUTTONS -->
       <tr>
-      	<td> <input type="Submit" name="cmdsignup" class="btnsignup"  value="SignUp"></td>
+      	<td> <input type="Submit"  class="btnsignup"  value="SignUp" onclick= "validate(txtname)"></td>
       </tr>   
     </table>
   </form>
