--- a/Register.html
+++ b/Register.html
@@ -88,7 +88,7 @@
       </tr>
 
       <tr>
-      	<td><input class="textbox" type="text" name="txtuname"></td>
+      	<td><input class="textbox" type="text" id="txtuname"></td>
       </tr>	
     
       <!-- EMAIL and EMAIL text box-->
@@ -124,7 +124,7 @@
       </tr>
 
       <tr>
-      <td><textarea class="textbox" cols="35" rows="2"></textarea></td> 
+      <td><textarea class="textbox" cols="35" rows="2" id="txtaddress"></textarea></td> 
       </tr>
       
       <!-- CHECK BOX-->
@@ -134,7 +134,7 @@
 
       <!-- BUTTONS -->
       <tr>
-      	<td> <input type="Submit"  class="btnsignup"  value="SignUp" onclick= "validate(txtname)"></td>
+      	<td> <input type="Submit"  class="btnsignup"  value="SignUp" onclick= "validate(txtname,txtxaddress,txtuname)"></td>
       </tr>   
     </table>
   </form>
