Revert "Changed Name"
This reverts commit 7bb22a98adaaaca9e39650eb7b3bb66c58dfd2d5.

--- a/Contact Us.html
+++ b/Contact Us.html
@@ -58,7 +58,7 @@
 
     <!-- The introduction Section -->
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-      <h2 class="w3-wide">Movie Hut ?????</h2>
+      <h2 class="w3-wide">What is Movie Hut?</h2>
 
       <p class="w3-opacity"><i></i></p>
       <p class="w3-center">Movie Hut is an entertainment company that has revolutionized the way movies are rented. Originally developed in 2018, Movie Hut has basically taken the movies rental industry by storm by making it extremely easy to rent movies at a reasonable cost.
