--- a/Index.html
+++ b/Index.html
@@ -110,7 +110,7 @@
 
 	<div class="container">
 		<br>
-		<h1 id="Reserve">In the action of booking something</h1>
+		<h1 id="Reserve">Not In the action of booking something</h1>
 		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
 		<a href="Login.html">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
