--- a/Admin.html
+++ b/Admin.html
@@ -36,3 +36,21 @@
 		<li class="navbar_right"><a class="navbar" href="Login.html">Logout</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
+
+	<div class="container">
+		<br>
+		<h1 id="Reserve">Admin Dashboard</h1>
+		<p>View, Insert, Update or Delete Movies</p>
+		<br>
+		<form class="new_btn">
+
+		<input type="text" id="mid" name="mid" placeholder="Movie ID">
+		<input type="text" id="mname" name="fname" placeholder="Movie Name">
+		
+		<br>
+		<a href="Login.html">View <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html">Insert <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html">Update <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html">Delete <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+		</form>
+	</div>
