--- a/Admin.html
+++ b/Admin.html
@@ -42,10 +42,14 @@
 		<h1 id="Reserve">Admin Dashboard</h1>
 		<p>View, Insert, Update or Delete Movies</p>
 		<br>
+
 		<form class="new_btn">
 
 		<input type="text" id="mid" name="mid" placeholder="Movie ID">
 		<input type="text" id="mname" name="fname" placeholder="Movie Name">
+		<input type="text" id="mactor" name="mactor" placeholder="Movie Actor">
+		<input type="text" id="mactress" name="mactress" placeholder="Movie Actress">
+		<input type="text" id="mstatus" name="mstatus" placeholder="Movie Status">
 		
 		<br>
 		<a href="Login.html">View <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
