Phone number validation

--- a/Register.html
+++ b/Register.html
@@ -115,7 +115,7 @@
       </tr>
 
       <tr>
-      	<td><input class="textbox" type="text" name="txtno"></td>
+      	<td><input class="textbox" type="text" id="txtno" pattern="[1-9]{1}[0-9]{9}"></td>
       </tr>
    
       <!-- ADDRESS and ADDRESSS text box-->
@@ -134,7 +134,7 @@
 
       <!-- BUTTONS -->
       <tr>
-      	<td> <input type="Submit"  class="btnsignup"  value="SignUp" onclick= "validate(txtname,txtxaddress,txtuname)"></td>
+      	<td> <input type="Submit"  class="btnsignup"  value="SignUp" onclick= "validate(txtname,txtuname)"></td>
       </tr>   
     </table>
   </form>
