--- a/Admin.html
+++ b/Admin.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="Style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
@@ -52,9 +53,10 @@
 		<input type="text" id="mstatus" name="mstatus" placeholder="Movie Status">
 		
 		<br>
-		<a href="Login.html">View <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html">Insert <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html">Update <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html">Delete <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+		<br>
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">open_in_new</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">library_add</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"<i class="material-icons" style="font-size:36px;color:#2a2a57">update</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
 		</form>
 	</div>
