--- a/Admin.html
+++ b/Admin.html
@@ -50,6 +50,18 @@
 		<input type="text" id="mname" name="fname" placeholder="Movie Name">
 		<input type="text" id="mactor" name="mactor" placeholder="Movie Actor">
 		<input type="text" id="mactress" name="mactress" placeholder="Movie Actress">
+
+
+		<label class="radio">Available
+		  <input type="radio" checked="checked" name="mstatus" value="Available">
+		  <span class="checkmark"></span>
+		</label>
+		<label class="radio">Borrowed
+		  <input type="radio" name="mstatus" value="Borrowed">
+		  <span class="checkmark"></span>
+		</label>
+
+
 		<input type="text" id="mstatus" name="mstatus" placeholder="Movie Status">
 		
 		<br>
