--- a/Register.html
+++ b/Register.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-
+               <!--Java Script Definition-->
     <script type="text/javascript" src="Slideshow.js"> </script>
 
   <!-- Navigation Bar -->
@@ -58,7 +58,7 @@
 
   <font size="4"><p align="center"><b>Sign Up</b></p></font>
   <hr>
-  <form>
+  <form method="post" onsubmit = "return checkforblank()">
     <table border="0">
       <!-- Name and Name Text Box-->
                         
@@ -97,7 +97,7 @@
       </tr>
 
       <tr>
-      	<td><input class="textbox" type="Email" name="txtemail"></td>
+      	<td><input class="textbox" type="Email" name="txtemail" id="txtemail1"></td>
       </tr>
 
       <!-- PASSWORD and PASSWORD text box-->
@@ -106,7 +106,7 @@
       </tr>
 
       <tr>
-      	<td><input class="textbox" type="password" name="txtpassword"></td>
+      	<td><input class="textbox" type="password" name="txtpassword" id="password1"></td>
       </tr>
     
       <!-- CONTACT NO and CONTACT NO text box-->
