--- a/Admin.html
+++ b/Admin.html
@@ -51,14 +51,11 @@
 		<input type="text" id="mactor" name="mactor" placeholder="Movie Actor">
 		<input type="text" id="mactress" name="mactress" placeholder="Movie Actress">
 
-
 		<select id="mstatus" name="mstatus">
 			<option disabled selected value>Movie Status</option>
       		<option value="Available">Available</option>
       		<option value="Borrowed">Borrowed</option>
     	</select>
-
-		<!-- <input type="text" id="mstatus" name="mstatus" placeholder="Movie Status"> -->
 		
 		<br>
 		<br>
@@ -67,4 +64,7 @@
 		<a href="Login.html"<i class="material-icons" style="font-size:36px;color:#2a2a57">update</i></a> &nbsp &nbsp &nbsp
 		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
 		</form>
+
 	</div>
+
+	<hr width="75%">
