--- a/Admin.html
+++ b/Admin.html
@@ -64,7 +64,36 @@
 		<a href="Login.html"<i class="material-icons" style="font-size:36px;color:#2a2a57">update</i></a> &nbsp &nbsp &nbsp
 		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
 		</form>
-
-	</div>
-
+	
+	<br>
 	<hr width="75%">
+
+	<br>
+		<h1 id="Reserve">Our Reservations</h1>
+		<p>View, Insert, Update or Delete Movies</p>
+		<br>
+
+		<form class="new_btn">
+
+		<input type="text" id="mid" name="mid" placeholder="Movie ID">
+		<input type="text" id="mname" name="fname" placeholder="Movie Name">
+		<input type="text" id="mactor" name="mactor" placeholder="Movie Actor">
+		<input type="text" id="mactress" name="mactress" placeholder="Movie Actress">
+
+		<select id="mstatus" name="mstatus">
+			<option disabled selected value>Movie Status</option>
+      		<option value="Available">Available</option>
+      		<option value="Borrowed">Borrowed</option>
+    	</select>
+		
+		<br>
+		<br>
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">open_in_new</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">library_add</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"<i class="material-icons" style="font-size:36px;color:#2a2a57">update</i></a> &nbsp &nbsp &nbsp
+		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
+		</form>
+	
+	<br>
+	<hr width="75%">
+	</div>
