--- a/Admin.html
+++ b/Admin.html
@@ -70,7 +70,7 @@
 
 	<br>
 		<h1 id="Reserve">Our Reservations</h1>
-		<p>View, Insert, Update or Delete Movies</p>
+		<p>What movie did the </p>
 		<br>
 
 		<form class="new_btn">
