--- a/Admin.html
+++ b/Admin.html
@@ -38,13 +38,13 @@
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
 
-	<div class="container">
+	<div class="container new_btn" style="height: 100%;">
 		<br>
-		<h1 id="Reserve">Admin Dashboard</h1>
+		<h1>Admin Dashboard</h1>
 		<p>View, Insert, Update or Delete Movies</p>
 		<br>
 
-		<form class="new_btn">
+		<form>
 
 		<input type="text" id="mid" name="mid" placeholder="Movie ID">
 		<input type="text" id="mname" name="fname" placeholder="Movie Name">
@@ -65,35 +65,56 @@
 		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
 		</form>
 	
-	<br>
-	<hr width="75%">
-
-	<br>
-		<h1 id="Reserve">Our Reservations</h1>
-		<p>What movie did the </p>
-		<br>
-
-		<form class="new_btn">
-
-		<input type="text" id="mid" name="mid" placeholder="Movie ID">
-		<input type="text" id="mname" name="fname" placeholder="Movie Name">
-		<input type="text" id="mactor" name="mactor" placeholder="Movie Actor">
-		<input type="text" id="mactress" name="mactress" placeholder="Movie Actress">
-
-		<select id="mstatus" name="mstatus">
-			<option disabled selected value>Movie Status</option>
-      		<option value="Available">Available</option>
-      		<option value="Borrowed">Borrowed</option>
-    	</select>
-		
-		<br>
-		<br>
-		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">open_in_new</i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">library_add</i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html"<i class="material-icons" style="font-size:36px;color:#2a2a57">update</i></a> &nbsp &nbsp &nbsp
-		<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">delete_sweep</i></a>
-		</form>
-	
-	<br>
 	<hr width="75%">
 	</div>
+
+	<div class="container new_btn"  style="height: 100%;">
+		<h1>Our Reservations</h1>
+
+		<div class="half-container">
+			<p>Customer</p>
+			<form class="new_btn">
+
+			<input type="text" id="cid" name="cid" placeholder="Customer ID" disabled style="width:75%;">
+			<input type="text" id="cuser" name="cuser" placeholder="Customer Username" disabled style="width:75%;">
+			<input type="text" id="cname" name="cname" placeholder="Customer Name" disabled style="width:75%;">
+			<input type="text" id="cgender" name="cgender" placeholder="Customer Gender" disabled style="width:75%;">
+			<input type="text" id="cemail" name="cemail" placeholder="Customer Email" disabled style="width:75%;">
+			<input type="text" id="cnumber" name="cnumber" placeholder="Customer Contact" disabled style="width:75%;">
+			<input type="text" id="caddress" name="caddress" placeholder="Customer Address" disabled style="width:75%;">
+			
+			<br>
+			<br>
+			<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">navigate_before</i></a> &nbsp &nbsp &nbsp
+			<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">navigate_next</i></a>
+			</form>
+		</div>
+
+		<div class="half-container">
+			<p>Movies</p>
+			<form class="new_btn">
+
+			<input type="text" id="mid" name="mid" placeholder="Movie ID" disabled style="width:75%;">
+			<input type="text" id="mname" name="fname" placeholder="Movie Name" disabled style="width:75%;">
+			<input type="text" id="mactor" name="mactor" placeholder="Movie Actor" disabled style="width:75%;">
+			<input type="text" id="mactress" name="mactress" placeholder="Movie Actress" disabled style="width:75%;">
+			
+			<br>
+			<br>
+			<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">navigate_before</i></a> &nbsp &nbsp &nbsp
+			<a href="Login.html"><i class="material-icons" style="font-size:36px;color:#2a2a57">navigate_next</i></a>
+			</form>
+
+		</div>
+
+	</div>
+
+	<br>
+	<br>
+
+	<div class="footer">
+	  <p>Copyright 2018 <i class="fa fa-html5"></i> by <i class="fa fa-github"></i> Shakya | Rahal | Nafeel | Shohan | Sajidh</p>
+	</div>
+
+</body>
+</html>
