--- a/Index.html
+++ b/Index.html
@@ -108,9 +108,9 @@
 	<!-- Javascript link to Slideshow Gallery -->
 	<script src="Slideshow.js" type="text/javascript"></script>
 
-	<div class="container">
+	<div class="container" id="Reserve">
 		<br>
-		<h1 id="Reserve">In the action of booking something</h1>
+		<h1>In the action of booking something</h1>
 		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
 		<a href="Login.html">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
