--- a/User.html
+++ b/User.html
@@ -34,7 +34,6 @@
 		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
 		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
 		<li class="navbar_right"><a class="navbar" href="Register.html">Logout</a></li>
-		<li class="navbar_right"><a class="navbar" href="Login.html">Login</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
 
@@ -108,11 +107,11 @@
 	<!-- Javascript link to Slideshow Gallery -->
 	<script src="Slideshow.js" type="text/javascript"></script>
 
-	<div class="container">
+	<div class="container" id="Reserve">
 		<br>
-		<h1 id="Reserve">In the action of booking something</h1>
+		<h1>Welcome Sajidh</h1>
 		<p>Last Minute Movie Browsings ????? <br> No Problem <br> We have the right set of Movies for all your needs</p>
-		<a href="Login.html">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+		<a href="#IMG_Gallery">Reserve Now <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
 
 	<hr width="75%">
