--- a/Register.html
+++ b/Register.html
@@ -88,7 +88,7 @@
       </tr>
 
       <tr>
-      	<td><input class="textbox" type="text" id="txtuname"><label></label></td>
+      	<td><input onkeyup = "validateUsername()" class="textbox" type="text" id="txtuname"><label id="commentusername"></label></td>
       </tr>	
     
       <!-- EMAIL and EMAIL text box-->
