--- a/User.html
+++ b/User.html
@@ -209,7 +209,48 @@
 		  <div class="desc">Gajaman 3D</div>
 		</div>
 
-	</div>
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Martian.jpg" alt="The Martian" width="300" height="200">
+		  </a>
+		  <div class="desc">The Martian</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Alien.jpg" alt="Alien" width="300" height="200">
+		  </a>
+		  <div class="desc">Alien</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Venom.jpg" alt="Venom" width="300" height="200">
+		  </a>
+		  <div class="desc">Venom</div>
+		</div>
+
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Tomb Raider.jpg" alt="Tomb Raider" width="300" height="200">
+		  </a>
+		  <div class="desc">Tomb Raider</div>
+		</div>
+		
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/Dracula.jpg" alt="Dracula" width="300" height="200">
+		  </a>
+		  <div class="desc">Dracula</div>
+		</div>
+		
+		<div class="gallery">
+		  <a target="_blank" href="#">
+		    <img src="Images/Background/MI6.jpg" alt="Mission Impossible Fallout" width="300" height="200">
+		  </a>
+		  <div class="desc">Mission Impossible 6: Fallout</div>
+		</div>
+		</div>
 
 	<hr width="75%">
 
