--- a/Index.html
+++ b/Index.html
@@ -198,16 +198,16 @@
 
 		<div class="gallery">
 		  <a target="_blank" href="#">
-		    <img src="Images/Background/Idharkuthane Aasaipattai Balakumara.jpg" alt="Idharkuthane Aasaipattai Balakumara" width="300" height="200">
+		    <img src="Images/Background/Dracula.jpg" alt="Dracula" width="300" height="200">
 		  </a>
-		  <div class="desc">Idharkuthane Aasaipattai Balakumara</div>
+		  <div class="desc">Dracula</div>
 		</div>
-
+		
 		<div class="gallery">
 		  <a target="_blank" href="#">
-		    <img src="Images/Background/Gajaman.jpg" alt="Gajaman" width="300" height="200">
+		    <img src="Images/Background/MI6.jpg" alt="Mission Impossible Fallout" width="300" height="200">
 		  </a>
-		  <div class="desc">Gajaman 3D</div>
+		  <div class="desc">Mission Impossible 6: Fallout</div>
 		</div>
 
 	</div>
