--- a/User.html
+++ b/User.html
@@ -31,7 +31,7 @@
 				<a href="#Upcomings">Upcomings</a>
 			</div>
 		</li>
-		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
+		<li class="navbar"><a class="navbar" href="Contact Us - User.html">Contact Us</a></li>
 		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
 		<li class="navbar_right"><a class="navbar" href="Register.html">Logout</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
@@ -246,7 +246,7 @@
 		<br>
 		<h1 id="Upcomings">About to happen. Forthcoming.</h1>
 		<p>Stay tuned with us for the upcoming movies</p>
-		<a href="#">Subscribe <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
+		<a href="Contact Us - User.html">Subscribe <i class="fa fa-arrow-circle-right" style="font-size:25px;color:#2a2a57"></i></a>
 	</div>
 	
 	<div class="footer">
