--- a/User.html
+++ b/User.html
@@ -22,7 +22,7 @@
 
 	<!-- Navigation Bar -->
 	<ul class="navbar">
-		<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
+		<li class="navbar"><a class="navbar active" href="User.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
 		<li class="navbar dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Movies</a>
 			<div class="dropdown-content">
@@ -33,7 +33,7 @@
 		</li>
 		<li class="navbar"><a class="navbar" href="Contact Us - User.html">Contact Us</a></li>
 		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
-		<li class="navbar_right"><a class="navbar" href="Register.html">Logout</a></li>
+		<li class="navbar_right"><a class="navbar" href="#">Logout</a></li>
 		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
 
