--- a/Admin.html
+++ b/Admin.html
@@ -23,19 +23,19 @@
 
 	<!-- Navigation Bar -->
 	<ul class="navbar">
-		<li class="navbar"><a class="navbar active" href="Index.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
+		<li class="navbar"><a class="navbar active" href="User.html"><i class="fa fa-video-camera" style="font-size:16px"></i></a></li>
 		<li class="navbar dropdown">
 			<a href="javascript:void(0)" class="dropbtn">Movies</a>
 			<div class="dropdown-content">
-				<a href="#Reserve">Reserve Now</a>
-				<a href="#IMG_Gallery">Motion Gallery</a>
-				<a href="#Upcomings">Upcomings</a>
+				<a href="User.html#Reserve">Reserve Now</a>
+				<a href="User.html#IMG_Gallery">Motion Gallery</a>
+				<a href="User.html#Upcomings">Upcomings</a>
 			</div>
 		</li>
-		<li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
+		<li class="navbar"><a class="navbar" href="Contact Us - User.html">Contact Us</a></li>
 		<li class="navbar_logo"><img src="Images/Logo/MovieHut Logo White.png" class="logo" width="40%" height="40%"></li>
-		<li class="navbar_right"><a class="navbar" href="Login.html">Logout</a></li>
-		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search" id="search"></li>
+		<li class="navbar_right"><a class="navbar" href="#">Logout</a></li>
+		<li class="navbar_right"><input type="text" name="search" placeholder="&#xf002 Search" class="Search"></li>
 	</ul>
 
 	<div class="container new_btn" style="height: 100%;">
