--- a/Contact Us - User.html
+++ b/Contact Us - User.html
@@ -40,9 +40,9 @@
     <li class="navbar dropdown">
       <a href="javascript:void(0)" class="dropbtn">Movies</a>
       <div class="dropdown-content">
-        <a href="#Reserve">Reserve Now</a>
-        <a href="#IMG_Gallery">Motion Gallery</a>
-        <a href="#Upcomings">Upcomings</a>
+        <a href="User.html#Reserve">Reserve Now</a>
+        <a href="User.html#IMG_Gallery">Motion Gallery</a>
+        <a href="User.html#Upcomings">Upcomings</a>
       </div>
     </li>
     <li class="navbar"><a class="navbar" href="Contact Us - User.html">Contact Us</a></li>
