--- a/Register.html
+++ b/Register.html
@@ -29,9 +29,9 @@
     <li class="navbar dropdown">
       <a href="javascript:void(0)" class="dropbtn">Movies</a>
       <div class="dropdown-content">
-        <a href="#Reserve">Reserve Now</a>
-        <a href="#IMG_Gallery">Motion Gallery</a>
-        <a href="#Upcomings">Upcomings</a>
+        <a href="Index.html#Reserve">Reserve Now</a>
+        <a href="Index.html#IMG_Gallery">Motion Gallery</a>
+        <a href="Index.html#Upcomings">Upcomings</a>
       </div>
     </li>
     <li class="navbar"><a class="navbar" href="Contact Us.html">Contact Us</a></li>
